syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "HelloWorld";

message HelloRequest {
    string message = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}